@@ -49,6 +49,10 @@
       
       \item Extremely large exponents on zero expressed in scientific
       notation (e.g. \code{0.0e50000}) could give \code{NaN}.  (\PR{15976})
+
+      \item \code{nlm()} no longer modifies the callback argument in place (a
+      new vector is allocated for each invocation, which mimics the
+      implicit duplication that occurred in R < 3.1.0). (\PR{15958})
     }
   }
 }
